fix reupload issue

--- a/aligned-front/public/config.json
+++ b/aligned-front/public/config.json
@@ -1,5 +1,5 @@
 {
-  "API_URL": "http://localhost:8001",
+  "API_URL": "https://align-api.r7g.org",
   "ENVIRONMENT": "dev",
   "LOG_LEVEL": "debug",
   "SERVICE_NAME": "front"
